# rust-singleton

./: Cargo.toml  README.md
golang/: go.mod  main.go
my_module/: Cargo.toml  lib.rs
safe_singleton/: README.md
src/: Cargo.toml  main.rs
